fix: PlayerResultDto에서 Map.copyOf()로 발생하는 플레이어 순서 미보장 문제 해결